@@ -3,6 +3,7 @@
 	* src/lib/gsudoku.py Load random module (Bug #411073).
 	* src/lib/game_selector.py Fix PyGtk tree selection bug (Bug #416063)
        	* src/lib/gnome_sudoku.py Fix undo tracker deletion (Bug #417805)
+	* src/lib/sudoku_maker.py Handle exceptions loading pickled objects (Bug #408837)
 
 2007-02-25  Thomas M. Hinkle  <thinkle@cvs.gnome.org>
 
